--- a/package.json
+++ b/package.json
@@ -17,5 +17,10 @@
     "@astrojs/tailwind": "^5.0.2",
     "astro": "^3.3.0",
     "tailwindcss": "^3.3.3"
+  },
+  "devDependencies": {
+    "@astrojs/solid-js": "^3.0.2",
+    "astro-content-devtools": "^0.0.4",
+    "solid-js": "^1.8.1"
   }
 }
